extends Control

func _on_Button_pressed():
	get_tree().change_scene("res://UI/Menu.tscn")


func _on_1st_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")
	


func _on_2nd_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")


func _on_3rd_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")
	

func _on_4th_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")


func _on_5th_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")


func _on_6th_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")


func _on_7th_Floor_pressed():
	get_tree().change_scene("res://TestFloor.tscn")


func _on_Last_Floor_pressed():
	get_tree().change_scene('res://FocusMode/FocusMode.tscn')
